  You can now specify the Laser maximum receive variable in the config.
  Fixed a rare crash that would occur if you reloaded the world while a machine
    was working on its last item.
  Fix message telling players the black hole is not allowed in this dimension
    was displaying twice. - Error since v1.3.
  Added an alternate crafting recipe for the Fusion Energy Converter.



v1.3.3 - October 13, 2020
  Fixed Inverter crash. sigh.
  Added an alternate crafting recipe for the Caution Block.
  No longer displays Portal warning message as the Unknown Dimension
    doesn't exist in the 1.14 and 1.15 versions.



v1.3.2 - October 1, 2020
  Energy Suspension Bridge can now overwrite replaceable blocks.
   - Area is no longer considered obstructed if it contains tall grass.
  Advanced Ore Refinery:
   - Now requires 20 seconds to do an operation, twice as long as a Furnace.
   - Now requires 8,000 energy per operation instead of 5,000.
  Fixed block transparency issues:
   - Portal to the Unknown Dimension energy blocks.
   - Energy Storage Container.
   - Energy Suspension Bridge blocks (but only for horizontal bridges)
   - Laser energy blocks.
  Fix Fusion Energy Structure Laser Beam was solid and not transparent.
   - Only for 1.15 version.
  Added an Auto Shutoff toggle to the Portal Control Panel.
  Fixed crashes regarding ticking TileEntities, LazyOptional.orElseGet(), and getCapabilities().
   - Only for 1.14 and 1.15 versions.
  Compressor:
   - Now has an input filter.
   - Fixed Hoppers being able to put items into an inaccessible 2nd slot.
  Made machine Map Colors more accurate.
  Energy Storage Container no longer sounds like Glass.
  Fixed the Fusion Chamber being broken in a weird manner.
   - Only for 1.14 and 1.15 versions.



v1.3.1 - August 13, 2020
  No longer changes Music Box track instrument when you set notes.
   - Change track instrument by clicking the instrument button beside each track.