@@ -36,7 +36,7 @@
     ]
   ],
   "rewards": {
-    "recipe": [
+    "recipes": [
       "overpowered:fusion_control_unit"
     ]
   }
