@@ -47,7 +47,7 @@
     ]
   ],
   "rewards": {
-    "recipe": [
+    "recipes": [
       "overpowered:fusion_energy_converter",
       "overpowered:fusion_energy_converter_alternate"
     ]
